<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">


    <Button
            android:text="@string/home_button"
            android:layout_width="178dp"
            android:layout_height="58dp"
            android:id="@+id/home_button_all_currency"
            android:background="?android:attr/colorButtonNormal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/all_currency"
            android:layout_width="202dp"
            android:layout_height="60dp"
            android:id="@+id/all_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_button_all_currency" android:layout_marginStart="8dp"
            android:background="@android:color/white" style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <ListView
            android:id="@+id/currency_list_view"
            android:layout_width="411dp"
            android:layout_height="597dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/currencies"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/home_button_all_currency"
            app:layout_constraintHorizontal_bias="0.497" android:textSize="24sp" android:textAlignment="center"/>


</android.support.constraint.ConstraintLayout>