<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <ListView
            android:id="@+id/favourite_currency_list_view"
            android:layout_height="336dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/favourite_currencies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_width="wrap_content" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/home_button"
            android:layout_width="202dp"
            android:layout_height="58dp"
            android:id="@+id/home_button"
            app:layout_constraintBottom_toTopOf="@+id/favourite_currency_list_view"
            app:layout_constraintEnd_toStartOf="@+id/all_currency_main" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.0" style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@android:color/background_light"/>
    <Button
            android:text="@string/all_currency"
            android:layout_width="202dp"
            android:layout_height="58dp"
            android:id="@+id/all_currency_main"
            app:layout_constraintStart_toEndOf="@+id/home_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:background="?android:attr/colorButtonNormal"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/favourite_currencies"
            android:layout_width="293dp"
            android:layout_height="51dp"
            android:id="@+id/favourite_currencies"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/currency_value" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="24sp" android:textAlignment="center"/>

    <EditText
            android:id="@+id/currency_value"
            android:layout_height="wrap_content"
            android:layout_width="272dp"
            android:inputType="number"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/home_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.154"/>
    <TextView
            android:text="@string/huf"
            android:layout_width="60dp"
            android:layout_height="44dp"
            android:id="@+id/huf" android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/currency_value" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.111" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/all_currency_main" android:textSize="24sp"/>

</android.support.constraint.ConstraintLayout>