<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">
    <android.support.constraint.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="395dp"
            android:layout_height="78dp" android:id="@+id/constraintLayout" app:layout_constraintVertical_bias="0.499">

        <TextView
                android:text="@string/list_item_country"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:id="@+id/currency_list_country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.1"
                android:layout_marginStart="34dp"
                app:layout_constraintEnd_toStartOf="@+id/currency_list_actual_price" android:layout_marginEnd="135dp"
        />
        <TextView
                android:text="@string/list_item_name"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:id="@+id/currency_list_name"
                app:layout_constraintStart_toEndOf="@+id/currency_list_actual_price" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/list_item_actual_price"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:id="@+id/currency_list_actual_price"
                app:layout_constraintStart_toEndOf="@+id/currency_list_country"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="115dp"
        />
    </android.support.constraint.ConstraintLayout>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/star_big_off"
            android:id="@+id/favourite_star_off"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout" app:layout_constraintHorizontal_bias="0.429"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            android:background="@android:drawable/screen_background_light_transparent"
            android:focusable="false"
    />
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/favourite_star_on"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout" app:layout_constraintHorizontal_bias="0.416"
            android:background="@android:color/transparent"
            android:focusable="false"
    />
</android.support.constraint.ConstraintLayout>